--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <script type="application/javascript">
   </script>
   <body>
-    <h1 id="victory">Abram is the champion</h1>
-    <script type="text/javascript" src="index.js"></script>
+    <h1 id="victory">
+      <h1 id="victory">Abram is the champion</h1>
+      <script type="text/javascript" src="index.js"></script>
+    </div>
   </body>
 </html>
